# pygf

./: LICENSE  README.md  README.rst  pyproject.toml  setup.py
doc/: Makefile  arrows.py  common.py  dash.py  tikz.md
doc/source/: conf.py  geometry.rst  index.rst  layer.rst  styles.rst
gallery/: README.md
pygf/: #Tikz.py#  Geometry.py  Layer.py  Options.py  Svg.py  Tikz.py
src/pygf/: Layer.py  Svg.py  __init__.py  geometry.py  layer.py  svg.py  tikz.py
tests/: README.md  cable.py  example_arrows.py  example_dash.py  example_polyline.py  example_polyline2.py  example_thickness.py  exemple_code.py  exemple_zone.py  test.py  test_layer.py
