[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygf"
dynamic = ["version"]
description = "A Python Graphics Format"
readme = "README.md"
license = { file = "LICENSE", license = "BSD-2-Clause" }
authors = [
    { name = "Emmanuel Jeandel", email = "emmanuel.jeandel@loria.fr" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ejeandel/pygf"

[tool.hatch.version]
path = "src/pygf/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pygf",
]

[tool.black]
line-length = 110

[tool.pyright]
executionEnvironments = [
  { root = "src" }
]

[tool.ruff.lint.per-file-ignores]
'tests/**/*.py' = [
    'INP001',
    'N813',
]

